--- a/sandag.org/popest/meta/doc.yaml
+++ b/sandag.org/popest/meta/doc.yaml
@@ -1,3 +1,15 @@
 documentation:
-    main: ''
-    readme: ''
+    main: '
+
+        # SANDAG Series 13 Regional Growth Forecast data by Census Tract
+
+
+        Forecast data to 2050 for population, income, housing and race/ethnicity.
+        Obtained via email.
+
+        '
+    readme: '# SANDAG Series 13 Regional Growth Forecast data by Census Tract
+
+
+        Forecast data to 2050 for population, income, housing and race/ethnicity.
+        Obtained via email.'
