--- a/sandiego.gov/opendsd-xml/bundle.yaml
+++ b/sandiego.gov/opendsd-xml/bundle.yaml
@@ -5,9 +5,9 @@ about:
     subject: null
     summary: Full data for application receieved, permits issues and permits completed,
         from the City of San Diego Project Tracking System, pulled from the OpenDSD
-        web API.
+        web API. XML is saved, but not parsed. 
     tags: []
-    title: OpenDSD Approvals, Invoices and Projects
+    title: XML For OpenDSD Approvals, Invoices and Projects
 contact_bundle:
     creator:
         email: eric@sandiegodata.org
