--- a/sandiego.gov/opendsd-index/meta/doc.yaml
+++ b/sandiego.gov/opendsd-index/meta/doc.yaml
@@ -1,18 +1,18 @@
 documentation:
     main: '
 
-        # OpenDSD Approvals, Invoices and Projects
+        # Index to OpenDSD Approvals, Invoices and Projects
 
 
-        XML Exports of projects, approvals and invoices, exported from the Project
-        Tracking System.
+        XML Exports of summaries of applications and permits, exported from the City
+        of San Diego Project Tracking System.
 
         '
-    readme: '# OpenDSD Approvals, Invoices and Projects
+    readme: '# Index to OpenDSD Approvals, Invoices and Projects
 
 
-        XML Exports of projects, approvals and invoices, exported from the Project
-        Tracking System.
+        XML Exports of summaries of applications and permits, exported from the City
+        of San Diego Project Tracking System.
 
 
         # Development Notes
