--- a/sandiego.gov/opendsd-index/bundle.yaml
+++ b/sandiego.gov/opendsd-index/bundle.yaml
@@ -3,8 +3,8 @@ about:
     license: null
     rights: null
     subject: null
-    summary: XML Exports of summaries of applications and permits, exported from the City of San Diego Project
-        Tracking System.
+    summary: XML Exports of summaries of applications and permits, exported from the
+        City of San Diego Project Tracking System.
     tags: []
     title: Index to OpenDSD Approvals, Invoices and Projects
 contact_bundle:
@@ -40,19 +40,22 @@ identity:
     btime: null
     dataset: opendsd
     id: d03f
-    revision: 1
+    revision: 2
     source: sandiego.gov
     subset: index
     type: null
     variation: null
-    version: 0.0.1
+    version: 0.0.2
 names:
-    fqname: sandiego.gov-opendsd-index-0.0.1~d03f001
+    fqname: sandiego.gov-opendsd-index-0.0.2~d03f002
     name: sandiego.gov-opendsd-index
-    vid: d03f001
-    vname: sandiego.gov-opendsd-index-0.0.1
+    vid: d03f002
+    vname: sandiego.gov-opendsd-index-0.0.2
 process: {}
 versions:
     1:
-        description: null
+        description: Initial version
         version: 0.0.1
+    2:
+        description: Adding year to date, for 2014.
+        version: 0.0.2
