--- a/sandiego.gov/opendsd-xml/meta/doc.yaml
+++ b/sandiego.gov/opendsd-xml/meta/doc.yaml
@@ -1,17 +1,17 @@
 documentation:
     main: '
 
-        # OpenDSD Approvals, Invoices and Projects
+        # XML For OpenDSD Approvals, Invoices and Projects
 
 
         Full data for application receieved, permits issues and permits completed,
         from the City of San Diego Project Tracking System, pulled from the OpenDSD
-        web API.
+        web API. XML is saved, but not parsed.
 
         '
-    readme: '# OpenDSD Approvals, Invoices and Projects
+    readme: '# XML For OpenDSD Approvals, Invoices and Projects
 
 
         Full data for application receieved, permits issues and permits completed,
         from the City of San Diego Project Tracking System, pulled from the OpenDSD
-        web API.'
+        web API. XML is saved, but not parsed.'
