--- a/sandiego.gov/opendsd-index/bundle.yaml
+++ b/sandiego.gov/opendsd-index/bundle.yaml
@@ -17,7 +17,10 @@ contact_bundle:
         name: Eric Busboom
         url: http://www.sandiegodata.org
 contact_source:
-    creator: {}
+    creator:
+        email: dsdprojectinfo@sandiego.gov.
+        name: City of San Diego Development Services Department
+        url: http://www.sandiego.gov/development-services/index.shtml
     maintainer: {}
 external_documentation:
     agency:
@@ -65,5 +68,5 @@ versions:
         description: Adding year to date, for 2014.
         version: 0.0.2
     3:
-        description: null
+        description: Some lengths were too short.
         version: 0.0.3
