--- a/sandiegohungercoalition.org/agencies/meta/doc.yaml
+++ b/sandiegohungercoalition.org/agencies/meta/doc.yaml
@@ -1,13 +1,15 @@
 documentation:
     main: '
 
-        # None
+        # Food Agency Locations
 
 
-        None
+        This is an incomplete geocoding of a subset of a list of food agencies provided
+        by the San Diego Food System Alliance
 
         '
-    readme: '# None
+    readme: '# Food Agency Locations
 
 
-        None'
+        This is an incomplete geocoding of a subset of a list of food agencies provided
+        by the San Diego Food System Alliance'
