--- a/sandiegohungercoalition.org/agencies/meta/build.yaml
+++ b/sandiegohungercoalition.org/agencies/meta/build.yaml
@@ -1,9 +1,13 @@
 build:
     requirements:
         xlrd: xlrd
-dependencies: {}
+dependencies:
+    blockgroups: census.gov-tigerline-2012-blockgroups-ca-geo
 sources:
     agency_list:
         description: description
-        url: file:///Volumes/Storage/Downloads/SDFSA_agencies.csv
+        url: file:///Volumes/Storage/Downloads/agencies.csv
+    sdfb_partners:
+        description: San Diego Food Bank Partners
+        url: file:///Users/eric/Desktop/foodsystem/food_system_dc2015/sdfb_partner_agencies.csv
 views: {}
