--- a/sandiegohungercoalition.org/agencies/meta/build.yaml
+++ b/sandiegohungercoalition.org/agencies/meta/build.yaml
@@ -5,9 +5,9 @@ dependencies:
     blockgroups: census.gov-tigerline-2012-blockgroups-ca-geo
 sources:
     agency_list:
-        description: description
-        url: file:///Volumes/Storage/Downloads/agencies.csv
+        description: List of SDFSA food distribution agencies
+        url: http://ds.civicknowledge.org.s3.amazonaws.com/sandiegohungercoalition.org/agencies.csv
     sdfb_partners:
         description: San Diego Food Bank Partners
-        url: file:///Users/eric/Desktop/foodsystem/food_system_dc2015/sdfb_partner_agencies.csv
+        url: http://ds.civicknowledge.org/sandiegohungercoalition.org/sdfb_partner_agencies.csv
 views: {}
