--- a/sdfsa.org/agencies/meta/doc.yaml
+++ b/sdfsa.org/agencies/meta/doc.yaml
@@ -7,12 +7,13 @@ documentation:
         \ quality issues that are typical of administrative data. \n\nThe three partitions\
         \ in this dataset are: \n\n* `sandiegohungercoalition.org-agencies-agency_list`\
         \  is a subset of the organizations references in the [SDFSA Master Agency\
-        \ Matrix spreadsheet](http://ds.civicknowledge.org/Agency%20Matrix.xlsx).\
+        \ Matrix spreadsheet](http://ds.civicknowledge.org/sandiegohungercoalition.org/Agency%20Matrix.xlsx).\
         \ It enumerates the agencies in the list and assigns `site_id` values to the\
         \ different locations. \n\n* `sandiegohungercoalition.org-agencies-sdfb_partners`\
         \  has a direct import of  a list of agencies that are partners of the San\
-        \ Diego Food Bank. THis list may be different than in `agency_list`\n\n* `sandiegohungercoalition.org-agencies-locations`\
-        \ geocodes all of the addresses in the `agency_list` and `sdfb_partners` files\n"
+        \ Diego Food Bank. This list may be different than in `agency_list`\n\n* `sandiegohungercoalition.org-agencies-locations`\
+        \ geocodes all of the addresses in the `agency_list` and `sdfb_partners` files\n\
+        \n"
     readme: '# Food Agency Locations
 
 
