--- a/211sandiego.org/calls-p1ye2014/meta/build.yaml
+++ b/211sandiego.org/calls-p1ye2014/meta/build.yaml
@@ -29,3 +29,4 @@ sources:
     programservices:
         description: null
         url: s3://ds.civicknowledge.org/211sandiego.org/211%20San%20Diego%20Calls%20and%20Followups%202014/211%20Agency-Program-Svcs%20Data%20Export.xlsx
+views: {}
