--- a/sandiego.gov/opendsd-index/bundle.yaml
+++ b/sandiego.gov/opendsd-index/bundle.yaml
@@ -1,11 +1,15 @@
 about:
+    access: null
+    grain: null
     groups: []
     license: null
     rights: null
+    space: null
     subject: null
     summary: XML Exports of summaries of applications and permits, exported from the
         City of San Diego Project Tracking System.
     tags: []
+    time: null
     title: Index to OpenDSD Approvals, Invoices and Projects.
 contact_bundle:
     creator:
@@ -62,11 +66,14 @@ names:
 process: {}
 versions:
     1:
+        date: null
         description: Initial version
         version: 0.0.1
     2:
+        date: null
         description: Adding year to date, for 2014.
         version: 0.0.2
     3:
+        date: null
         description: Some lengths were too short.
         version: 0.0.3
