--- a/sweetwaterschools.org/boundaries/bundle.yaml
+++ b/sweetwaterschools.org/boundaries/bundle.yaml
@@ -1,10 +1,14 @@
 about:
+    access: null
+    grain: null
     groups: []
     license: null
     rights: null
+    space: null
     subject: null
     summary: Boundaries of Sweetwater district middle and High schools.
     tags: []
+    time: null
     title: Sweetwater School District School Boundaries
 contact_bundle:
     creator:
@@ -49,11 +53,14 @@ names:
 process: {}
 versions:
     1:
+        date: null
         description: null
         version: 0.0.1
     2:
+        date: null
         description: null
         version: 0.0.2
     3:
+        date: null
         description: null
         version: 0.0.3
