--- a/sweetwaterschools.org/boundaries/meta/build.yaml
+++ b/sweetwaterschools.org/boundaries/meta/build.yaml
@@ -1,10 +1,11 @@
 build:
     s_srs: 4326
 dependencies:
-    bg2012: census.gov-tigerline-2012-blockgroups-ca-geo-0.0.4
+    bg2012: census.gov-tigerline-2012-blockgroups-ca-geo->=0.0.4
     blocks: clarinova.com-places-casnd-blocks-geo
 extract: {}
 sources:
     sws_boundaries:
         description: School enrollmentboundaries shapefile
         url: http://ds.civicknowledge.org/voiceofsandiego.org/Sweetwater%20Open%20Enrollment/Sweetwater%20District%20Boundary%20Files.zip
+views: {}
