--- a/exceptionalgrowth.org/ca/nets/bundle.yaml
+++ b/exceptionalgrowth.org/ca/nets/bundle.yaml
@@ -1,10 +1,14 @@
 about:
+    access: sdrdl
+    grain: null
     groups: []
     license: null
     rights: null
+    space: null
     subject: null
     summary: null
     tags: []
+    time: null
     title: null
 contact_bundle:
     creator:
@@ -49,5 +53,6 @@ names:
 process: {}
 versions:
     1:
+        date: null
         description: null
         version: 0.0.1
