--- a/sandiegodata.org/bad_addresses/bundle.yaml
+++ b/sandiegodata.org/bad_addresses/bundle.yaml
@@ -1,11 +1,15 @@
 about:
+    access: sdrdl
+    grain: null
     groups: []
     license: null
     rights: null
+    space: null
     subject: null
     summary: Collects addresses from other bundles that could not be geocoded, for
         additional processing
     tags: []
+    time: null
     title: Bad San Diego Addresses
 contact_bundle:
     creator:
@@ -50,5 +54,6 @@ names:
 process: {}
 versions:
     1:
+        date: null
         description: null
         version: 0.0.1
