--- a/211sandiego.org/calls-p1ye2014-dedupe/bundle.yaml
+++ b/211sandiego.org/calls-p1ye2014-dedupe/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: null
     summary: The 211 call dataset expresses multiple values in a field with multiple
         records, one for each value in a field, multiplied over all of the multiple
