--- a/civicsd.org/neighborhoods/bundle.yaml
+++ b/civicsd.org/neighborhoods/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: null
     summary: Boundaries of Downtown San Diego neighborhoods, which are significanty
         different than those provided by SANGIS.
