--- a/sandag.org/popest/bundle.yaml
+++ b/sandag.org/popest/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: Demographics
     summary: Forecast data to 2050 for population, income, housing and race/ethnicity.
         Obtained via email.
