--- a/sandiego.gov/opendsd-json/bundle.yaml
+++ b/sandiego.gov/opendsd-json/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: null
     summary: Full data for permit applications, invoices, and projects from the City
         of San Diego Project Tracking System, pulled from the OpenDSD web API as JSON.
