--- a/sandiego.gov/opendsd/bundle.yaml
+++ b/sandiego.gov/opendsd/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: null
     summary: COnversion of the JSON representation of OpenDSD objects to tabular data.
     tags: []
