--- a/sandiegodata.org/bad_addresses/bundle.yaml
+++ b/sandiegodata.org/bad_addresses/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: null
     summary: Collects addresses from other bundles that could not be geocoded, for
         additional processing
