--- a/sdcda.org/felony_hit_run-p6e2014/bundle.yaml
+++ b/sdcda.org/felony_hit_run-p6e2014/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: Traffic collision prosecution
     summary: Data from the San Diego DA's office about the prosecution results of
         hit and run collisions that resulted in injury or death.
