--- a/sdfsa.org/agencies/bundle.yaml
+++ b/sdfsa.org/agencies/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: null
     summary: Sites and locations for food distribtion for  San Diego Food System Alliance
         agencies and San Diego Food Bank partners.
