--- a/sweetwaterschools.org/boundaries/bundle.yaml
+++ b/sweetwaterschools.org/boundaries/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: null
     summary: Boundaries of Sweetwater district middle and High schools.
     tags: []
