--- a/sweetwaterschools.org/transfers-2008e2015/bundle.yaml
+++ b/sweetwaterschools.org/transfers-2008e2015/bundle.yaml
@@ -2,9 +2,9 @@ about:
     access: sdrdl
     grain: null
     groups: []
-    license: null
-    rights: null
-    space: null
+    license: odbl
+    rights: public
+    space: San Diego
     subject: School transfers
     summary: Transfer requests between sweetwater union school district schools, for
         the years from 2008 to 2014.
